--- a/index.html
+++ b/index.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Exercise 3</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script defer src="assets/planet.js"></script>
+    <script defer src="assets/filter.js"></script>
 </head>
+
 <body>
-    <center>
-        <h1>Daftar Planet</h1>
-    </center>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col col-lg-2">
+                <h4>Planets</h4>
+            </div>
+            <div class="col col-md-auto">
+                <input class="form-control" type="text" id="dev-table-filter" placeholder="Filter Planets"
+                    onchange="myFilter()" />
+            </div>
+        </div>
+    </br>
+        <div>
+            <table class="table table-striped table-bordered" id="dev-table">
+                <thead>
+                    <tr>
+                        <th scope="col">Name</th>
+                        <th scope="col">Rotation Period</th>
+                        <th scope="col">Orbital Period</th>
+                        <th scope="col">Diameter</th>
+                        <th scope="col">Climate</th>
+                        <th scope="col">Gravity</th>
+                        <th scope="col">Terrain</th>
+                        <th scope="col">Surface Water</th>
+                        <th scope="col">Population</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row"></th>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </body>
+
 </html>
