--- a/index.html
+++ b/index.html
@@ -7,41 +7,104 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script defer src="assets/planet.js"></script>
     <script defer src="assets/filter.js"></script>
+    <script defer src="assets/sort.js"></script>
+    <script src="https://kit.fontawesome.com/ae63fe3ea1.js"></script>
+    <style>
+        th {
+            cursor: pointer;
+        }
+        th:hover {
+           color: #FF00FF;
+        }
+    </style>
 </head>
 
 <body>
     <div class="container-fluid">
-        <div class="row">
-            <div class="col col-lg-2">
-                <h4>Planets</h4>
-            </div>
-            <div class="col col-md-auto">
-                <input class="form-control" type="text" id="dev-table-filter" placeholder="Filter Planets"
-                    onchange="myFilter()" />
+        <div class="row my-5">
+            <div class="col-2 mx-auto">
+                <img class="img-fluid" src="https://i.pinimg.com/originals/0c/e8/a5/0ce8a523d88df7415839eb9877cfde47.jpg" alt="Troopers">
             </div>
         </div>
-    </br>
-        <div>
-            <table class="table table-striped table-bordered" id="dev-table">
-                <thead>
-                    <tr>
-                        <th scope="col">Name</th>
-                        <th scope="col">Rotation Period</th>
-                        <th scope="col">Orbital Period</th>
-                        <th scope="col">Diameter</th>
-                        <th scope="col">Climate</th>
-                        <th scope="col">Gravity</th>
-                        <th scope="col">Terrain</th>
-                        <th scope="col">Surface Water</th>
-                        <th scope="col">Population</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row"></th>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="row my-5">
+            <div class="col-md-8 mx-auto">
+                <h4 style="text-align: center">Real-time Planets Filter</h4>
+                <div class="row">
+                    <div class="col">
+                        <select class="form-control" id="category">
+                            <option  value="0">Name</option>
+                            <option value="1">Rotation Period</option>
+                            <option value="2">Orbital Period</option>
+                            <option value="3">Diameter</option>
+                            <option value="4">Climate</option>
+                            <option value="5">Gravity</option>
+                            <option value="6">Terrain</option>
+                            <option value="7">Surface Water</option>
+                            <option value="8">Population</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <input class="form-control" type="text" id="dev-table-filter" placeholder="Filter Planets By Name" onkeyup="myFilter()" />
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-md-6 mx-auto">
+                        <button class="btn btn-danger btn-block" onclick="resetFilter()">Reset Filter</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h5 style="text-align: center">Click on column header to sort by category</h5>
+        <table class="table table-bordered text-white" id="dev-table">
+            <thead>
+                <tr class="bg-warning" style="text-align: center">
+                    <th scope="col" class="align-middle" data-index="0">
+                        Name
+                        <i class="fas fa-sort"></i>
+                    </th>
+                    <th scope="col" class="align-middle" data-index="1">
+                        Rotation Period
+                        <i class="fas fa-sort"></i>
+                    </th>
+                    <th scope="col" class="align-middle" data-index="2">
+                        Orbital Period
+                        <i class="fas fa-sort"></i>
+                    </th>
+                    <th scope="col" class="align-middle" data-index="3">
+                        Diameter
+                        <i class="fas fa-sort"></i>
+                    </th>
+                    <th scope="col" class="align-middle" data-index="4">
+                        Climate
+                        <i class="fas fa-sort"></i>
+                    </th>
+                    <th scope="col" class="align-middle" data-index="5">
+                        Gravity
+                        <i class="fas fa-sort"></i>
+                    </th>
+                    <th scope="col" class="align-middle" data-index="6">
+                        Terrain
+                        <i class="fas fa-sort"></i>
+                    </th>
+                    <th scope="col" class="align-middle" data-index="7">
+                        Surface Water
+                        <i class="fas fa-sort"></i>
+                    </th>
+                    <th scope="col" class="align-middle" data-index="8">
+                        Population
+                        <i class="fas fa-sort"></i>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+        <div class="my-3" id="loading-indicator" style="text-align: center">
+            <div class="spinner-border text-danger" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+            <h5>Loading Data...</h5>
+            <h6>Please Wait</h6>
         </div>
     </div>
 </body>
